feat: custom field creation and editing
* tiddlywiki inspiration planning
